Fix z-index of footer: simply remove z-index from .row in heck.css  line 43.

--- a/assets/css/heck.css
+++ b/assets/css/heck.css
@@ -40,7 +40,7 @@ section {
 	background: #000;
 	min-height:250px;
 	margin-top:15px;
-	z-index:11;
+	/*z-index:9;*/
 	position:relative;
 }
 
@@ -51,6 +51,7 @@ footer {
 	min-height:100px;
 	padding-top:8em;
 	padding-bottom:10em;
+	z-index:10;
 }
 
 footer .nav>li>a {
